23-Apr-2017 Fixes #323. C.ICommonWinResourceCompilerSettings now has a property, PreprocessorDefines, to pass definitions to the resource compiler. With Mingw and WindowsSDK implementations for Native and VSSolution build modes.

21-Apr-2017 ======== Version 1.1.1 beta 1 Release ========

17-Apr-2017 Fixes #319. Test harness now includes an executive summary of counts of succeeded, failed and ignored tests.

17-Apr-2017 Fixes #318. Default macOS deployment version is now 10.6 (was the current SDK). Setting this as old as possible for maximum backward compatibility. The default can be overridden by implementing the interface Bam.Core.IPackageMetaDataConfigure<Clang.MetaData>. See the Cxx11Test1 example.

15-Apr-2017 Fixes #317. Added all missing current C++ standards to C.Cxx.ELanguageStandards enumeration. Added are Cxx03, GnuCxx03 (not supported by Clang), GnuCxx11, Cxx14, GnuCxx14.

07-Apr-2017 ======== Version 1.1.0 Release ========

07-Apr-2017 Fixes #315. Switch tests on macOS to use Clang-Xcode8 by default.

30-Mar-2017 Fixes #312. Generated Xcode projects now honour 'false' values for ClangCommon.ICommonCompilerSettings.AllWarnings and ExtraWarnings.

25-Mar-2017 ======== Version 1.1.0 beta 3 Release ========

25-Mar-2017 Fixes #281. Improve the error message when mono is not detected.

21-Mar-2017 Fixes #304. MingwCommon.IArchiverSettings and GccCommon.IArchiverSettings have been renamed, for consistency, to MingwCommon.ICommonArchiverSettings and GccCommon.ICommonArchiverSettings. IMPORTANT: If user packages are referencing those old interface names, this is a breaking change, and requires script updates.

21-Mar-2017 Fixes #307. C source container indexing can now accept a path, using forward slashes to separate directories, to pattern match files in the container. Previously, this did not work on Windows, due to the comparison of forward slashes with back slashes. Using forward slashes is the BAM cross-platform convention.
